# ecmascript-parser-benchmark-native

./: README.md  package.json
result/: antd.json  react.json  three.json  typescript.json
rust/: Cargo.toml
rust/src/: lib.rs  oxc_react.rs  oxc_semantic_antd.rs  oxc_semantic_react.rs  oxc_semantic_three.rs  oxc_semantic_typescript.rs  swc_react.rs
scripts/: generate-readme.ts
zig/: build.zig  build.zig.zon
zig/src/: yuku_semantic.zig
