[package]
name = "rust_parsers"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_parsers"
path = "src/lib.rs"

[[bin]]
name = "oxc_typescript"
path = "src/oxc_typescript.rs"
test    = false
doctest = false

[[bin]]
name = "oxc_three"
path = "src/oxc_three.rs"
test    = false
doctest = false

[[bin]]
name = "oxc_antd"
path = "src/oxc_antd.rs"
test    = false
doctest = false

[[bin]]
name = "oxc_semantic_typescript"
path = "src/oxc_semantic_typescript.rs"
test    = false
doctest = false

[[bin]]
name = "oxc_semantic_three"
path = "src/oxc_semantic_three.rs"
test    = false
doctest = false

[[bin]]
name = "oxc_semantic_antd"
path = "src/oxc_semantic_antd.rs"
test    = false
doctest = false

[[bin]]
name = "swc_typescript"
path = "src/swc_typescript.rs"
test    = false
doctest = false

[[bin]]
name = "swc_three"
path = "src/swc_three.rs"
test    = false
doctest = false

[[bin]]
name = "swc_antd"
path = "src/swc_antd.rs"
test    = false
doctest = false

[dependencies]
oxc_allocator = "0.102.0"
oxc_parser = "0.102.0"
oxc_semantic = "0.102.0"
oxc_span = "0.102.0"

swc_ecma_parser = { version = "33.0.0", features = ["typescript"] }
swc_ecma_ast = "20.0.0"
swc_common = "18.0.1"

mimalloc = { package = "mimalloc-safe", version = "0.1.52" }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"
